--- a/src/com/milkyway/GUI/NhanVienJPanel.form
+++ b/src/com/milkyway/GUI/NhanVienJPanel.form
@@ -151,20 +151,22 @@
                                       </Group>
                                       <EmptySpace type="separate" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" attributes="0">
-                                          <Component id="txtSDT" linkSize="1" alignment="1" min="-2" pref="195" max="-2" attributes="0"/>
-                                          <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
-                                              <Component id="txtHoTen" linkSize="1" alignment="0" max="32767" attributes="0"/>
-                                              <Group type="102" alignment="0" attributes="0">
-                                                  <Component id="rdoNam" min="-2" max="-2" attributes="0"/>
-                                                  <EmptySpace type="separate" max="-2" attributes="0"/>
-                                                  <Component id="rdoNu" min="-2" max="-2" attributes="0"/>
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="txtSDT" linkSize="1" alignment="1" min="-2" pref="195" max="-2" attributes="0"/>
+                                              <Group type="103" alignment="0" groupAlignment="1" max="-2" attributes="0">
+                                                  <Group type="102" alignment="0" attributes="0">
+                                                      <Component id="rdoNam" min="-2" max="-2" attributes="0"/>
+                                                      <EmptySpace type="separate" max="-2" attributes="0"/>
+                                                      <Component id="rdoNu" min="-2" max="-2" attributes="0"/>
+                                                  </Group>
+                                                  <Component id="txtPass" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="txtConfirmPass" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="txtMaNV" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="txtTaiKhoan" alignment="0" max="32767" attributes="0"/>
+                                                  <Component id="txtNgaySinh" alignment="0" pref="195" max="32767" attributes="0"/>
                                               </Group>
-                                              <Component id="txtPass" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="txtConfirmPass" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="txtMaNV" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="txtTaiKhoan" alignment="0" max="32767" attributes="0"/>
-                                              <Component id="txtNgaySinh" alignment="0" max="32767" attributes="0"/>
                                           </Group>
+                                          <Component id="txtHoTen" linkSize="1" max="32767" attributes="0"/>
                                       </Group>
                                       <EmptySpace min="-2" pref="32" max="-2" attributes="0"/>
                                       <Group type="103" groupAlignment="0" max="-2" attributes="0">
@@ -189,7 +191,7 @@
                                       </Group>
                                       <EmptySpace pref="32" max="32767" attributes="0"/>
                                       <Component id="jPanel5" min="-2" max="-2" attributes="0"/>
-                                      <EmptySpace min="-2" pref="231" max="-2" attributes="0"/>
+                                      <EmptySpace min="-2" pref="195" max="-2" attributes="0"/>
                                   </Group>
                                   <Component id="jScrollPane2" alignment="0" max="32767" attributes="0"/>
                               </Group>
@@ -359,7 +361,7 @@
                           <Group type="103" groupAlignment="0" attributes="0">
                               <Group type="102" alignment="0" attributes="0">
                                   <EmptySpace max="-2" attributes="0"/>
-                                  <Component id="lblAnh" pref="215" max="32767" attributes="0"/>
+                                  <Component id="lblAnh" pref="251" max="32767" attributes="0"/>
                                   <EmptySpace max="-2" attributes="0"/>
                               </Group>
                           </Group>
@@ -480,10 +482,13 @@
                               <Color blue="99" green="ff" red="99" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Create.png"/>
+                              <Image iconType="3" name="/com/milkyway/Icons/Create.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Th&#xea;m"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnThemActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="btnCapNhat">
                           <Properties>
@@ -491,10 +496,13 @@
                               <Color blue="66" green="ff" red="ff" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Edit.png"/>
+                              <Image iconType="3" name="/com/milkyway/Icons/Edit.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnCapNhatActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="btnMoi">
                           <Properties>
@@ -502,10 +510,13 @@
                               <Color blue="cc" green="cc" red="cc" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Document.png"/>
+                              <Image iconType="3" name="/com/milkyway/Icons/Document.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="M&#x1edb;i"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnMoiActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="btnUpdateStatus">
                           <Properties>
@@ -513,10 +524,13 @@
                               <Color blue="ff" green="ff" red="99" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Save.png"/>
+                              <Image iconType="3" name="/com/milkyway/Icons/Save.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t tr&#x1ea1;ng th&#xe1;i"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateStatusActionPerformed"/>
+                          </Events>
                         </Component>
                         <Component class="javax.swing.JButton" name="btnWebcam">
                           <Properties>
@@ -524,7 +538,7 @@
                               <Color blue="ff" green="66" red="ff" type="rgb"/>
                             </Property>
                             <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
-                              <Image iconType="2" name="C:\MilkyWay\src\com\milkyway\Icons\Camera.png"/>
+                              <Image iconType="3" name="/com/milkyway/Icons/Camera.png"/>
                             </Property>
                             <Property name="text" type="java.lang.String" value="Ch&#x1ee5;p &#x1ea3;nh"/>
                           </Properties>
@@ -542,6 +556,9 @@
                             </Property>
                             <Property name="text" type="java.lang.String" value="Ch&#x1ecd;n &#x1ea3;nh"/>
                           </Properties>
+                          <Events>
+                            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnChonAnhActionPerformed"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
@@ -621,6 +638,9 @@
                               <TableHeader reorderingAllowed="true" resizingAllowed="true"/>
                             </Property>
                           </Properties>
+                          <Events>
+                            <EventHandler event="mouseClicked" listener="java.awt.event.MouseListener" parameters="java.awt.event.MouseEvent" handler="tblNhanVienMouseClicked"/>
+                          </Events>
                         </Component>
                       </SubComponents>
                     </Container>
@@ -761,6 +781,9 @@
                         </Property>
                         <Property name="text" type="java.lang.String" value="C&#x1ead;p nh&#x1ead;t tr&#x1ea1;ng th&#xe1;i"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="btnUpdateStatus1ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
