--- a/src/com/milkyway/GUI/NhanVienJPanel.form
+++ b/src/com/milkyway/GUI/NhanVienJPanel.form
@@ -336,8 +336,14 @@
                       </Properties>
                     </Component>
                     <Component class="javax.swing.JPasswordField" name="txtConfirmPass">
+                      <Properties>
+                        <Property name="name" type="java.lang.String" value="X&#xe1;c nh&#x1ead;n m&#x1ead;t kh&#x1ea9;u" noResource="true"/>
+                      </Properties>
                     </Component>
                     <Component class="javax.swing.JPasswordField" name="txtPass">
+                      <Properties>
+                        <Property name="name" type="java.lang.String" value="M&#x1ead;t kh&#x1ea9;u" noResource="true"/>
+                      </Properties>
                     </Component>
                     <Container class="javax.swing.JPanel" name="jPanel5">
                       <Properties>
@@ -571,6 +577,7 @@
                       <SubComponents>
                         <Component class="javax.swing.JTable" name="tblNhanVien">
                           <Properties>
+                            <Property name="autoCreateRowSorter" type="boolean" value="true"/>
                             <Property name="model" type="javax.swing.table.TableModel" editor="org.netbeans.modules.form.editors2.TableModelEditor">
                               <Table columnCount="9" rowCount="4">
                                 <Column editable="false" title="M&#xe3; nh&#xe2;n vi&#xea;n" type="java.lang.Object"/>
